--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 
 h1{
     font-size: 50px;
-
+    
 }
 h2{
     font-weight: 700;
@@ -14,6 +14,29 @@ h2{
 p{
     font-size: 10px;
     padding-bottom: 50px;
+}
+.menu-bar{
+    background-color:powderblue;
+    text-align: right;
+
+}
+.menu-bar ul{
+    display: inline-flex;
+    list-style: none;
+ 
+}
+.menu-bar ul li{
+    background-color:white;
+    width:auto;
+    border: 5px solid darkcyan;
+    border-radius:50px;
+    margin:20px;
+    padding: 15px;
+ 
+}
+.menu-bar ul li a{
+    color:darkcyan;
+    text-decoration: none; 
 }
 .orange{
     color:orangered;
@@ -60,22 +83,35 @@ section{
 }
 .item{
     width:30%;
-    margin-left: 3%;
+    margin-left: 5%;
     margin-right: 3%;
     border: 10px solid white;
     border-radius: 10px;
-    box-shadow: 10px 10px 40px gray;
+    box-shadow: 5px 5px 20px gray;
 }
 .item img{
     height:300px;
     width:100%;
     border-radius: 10px;
 }
+.social-media-review{
+
+    display: -moz-grid-line;
+    width:80%;
+    margin:30px 100px;
+    padding:30px 200px;
+    border: 10px solid white;
+    border-radius: 10px;
+    box-shadow: 5px 5px 20px gray;
+}
+
+
+
 footer{
     text-align: center;
     background-color: black; 
     padding-bottom: 50px;
-    margin-top: 100px;
+
 }
 footer p{
     color:white;
