--- a/style.css
+++ b/style.css
@@ -104,14 +104,11 @@ section{
     border-radius: 10px;
     box-shadow: 5px 5px 20px gray;
 }
-
-
-
 footer{
     text-align: center;
-    background-color: black; 
-    padding-bottom: 50px;
-
+    background-color: black;
+    padding-top: 10px; 
+    padding-bottom: 20px;
 }
 footer p{
     color:white;
